...
            let totalAccuracy = String(format: "%.2f", self.statisticService?.totalAccuracy ?? 0)
            
            let text =
            "Ваш результат: \(self.correctAnswers)/\(self.questionsAmount)\nКоличество сыгранных квизов: \(gamesCount)\nРекорд \(correct)/\(total) (\(date))\nСредняя точность \(totalAccuracy)%"
            //Не вынес создание сообщения в отдельную функцию по причине KISS/YAGNI
            let viewModel = AlertModel(
                title: "Этот раунд окончен!",
                message: text,
                buttonText: "Сыграть ещё раз",
                completion:  {[weak self] in
                    guard let self = self else { return }
                    self.restartGame()
                })
...
